--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div id="cabecalho">
                 <div id="caixa-foto">
-                <img src="foto.jpg" id="foto">
+                <img src="imagem-header.jpg" id="foto">
                 <h1>Felipe Priori Ferro</h1>
                 </div>
                 <h2>"Eu não desisto, apenas refaço meu caminho da forma correta!"</h2>
