--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header>
             <div id="cabecalho">
                 <div id="caixa-foto">
-                <img src="foto-header" id="foto">
+                <img src="foto-header.jpg" id="foto">
                 <h1>Felipe Priori Ferro</h1>
                 </div>
-                <h2>"Eu não des, apenas refaço meu caminho da forma correta!"</h2>
+                <h2>"Eu não desisto, apenas refaço meu caminho da forma correta!"</h2>
             </div>
         </header>
         <nav>
